Bug 424949 - Adding "Trash" to Kickoff favorites doesn't work
Summary: Adding "Trash" to Kickoff favorites doesn't work
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Application Launcher (Kickoff) widget (other bugs)
Version First Reported In: 5.18.5
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-08-03 00:32 UTC by Lua
Modified: 2022-05-03 12:38 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.25
Sentry Crash Report:


Attachments
nothing happens (518.22 KB, video/mp4)
2020-08-03 00:32 UTC, Lua
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Lua 2020-08-03 00:32:40 UTC
Created attachment 130599 [details]
nothing happens

SUMMARY


STEPS TO REPRODUCE
1. Open Kickoff, go to Places > scroll to the bottom to find the Trash item.
2.  Right click on it > Add to favorites

OBSERVED RESULT
Nothing happens.

EXPECTED RESULT
Trash being pinned to Kickoff.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Lua 2020-08-03 00:33:43 UTC
Sorry, I typed Places instead of Computer.
Comment 2 Lua 2020-08-03 00:34:37 UTC
And I also forgot to add the information, aaaargh ><
SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: Kubuntu 20.04
(available in About System)
KDE Plasma Version: 5.18.5
KDE Frameworks Version: 5.68.0
Qt Version: 5.12.8

ADDITIONAL INFORMATION
Comment 3 Nate Graham 2021-03-20 02:42:35 UTC
Confirmed.
Comment 4 Lua 2021-04-28 04:59:31 UTC
Context menu no longer opens for Trash here in KDE 5.21.4, so the problem was fixed?
Comment 5 Nate Graham 2021-04-28 15:10:27 UTC
Nah, still a bug.
Comment 6 Lua 2021-04-28 22:52:06 UTC
Understood. I though this feature was removed, making the context behavior not opening intentional
Comment 7 Nate Graham 2021-08-07 14:26:04 UTC
The problem seems to be that kastatsfavoritesmodel.cpp does not recognize any of the KIO workers (e.g. trash:/ and desktop:/) as valid things that can be favorited.
Comment 8 Méven Car 2022-05-03 12:11:38 UTC
Git commit 86517407195186a18346079bb456a9308bbed836 by Méven Car.
Committed on 03/05/2022 at 12:10.
Pushed by meven into branch 'master'.

Allow to display any place in favorites, /home/user or trash:/ or sftp:/my-server

M  +11   -3    applets/kicker/plugin/fileentry.cpp
M  +1    -1    applets/kicker/plugin/fileentry.h
M  +24   -11   applets/kicker/plugin/kastatsfavoritesmodel.cpp

https://invent.kde.org/plasma/plasma-workspace/commit/86517407195186a18346079bb456a9308bbed836
Comment 9 Kai Uwe Broulik 2022-05-03 12:16:28 UTC
Not a fan of those blocking mime determination in this patch. This should only be done when adding the place, not every time it's constructed. Unless I'm missing something this would jeopardize Plasma startup, no?