Allow to display any place in favorites, /home/user or trash:/ or sftp:/my-server

BUG: 424949